frontend/test/should_pass/basic_068.grg
using basic_model_068;

rule B {
	a : A;
	aa : A;
	replace {
		aa;
		exec(B);
		emit(typeof(aa)!=A);
	}
}

