frontend/test/should_fail/exec_023.grg
using deep_model_001;

rule r(y : Bcc) : (B) {
  modify{
    exec( b:boolean = ((b:B)=r(y)) );
    return (y);
  }
}
